# cmake-tutorial

1-hello/: CMakeLists.txt  README.md  main.cpp
2-version/: CMakeLists.txt  main.cpp
3-add-library/: CMakeLists.txt  README.md  hello.cpp  main.cpp  run.bat
3-add-library/include/: HelloWorldConfig.h.in  hello.hpp
